--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,136 @@
   -webkit-text-size-adjust: 100%;
 }
 
+
+label{
+  color: white;
+}
+
+body{
+  margin: 0;
+  background-color: black;
+  min-height: 100vh;
+}
+
+header{
+  margin: 0;
+  padding: 0;
+  top: 0;
+  background-color: black;
+  width: 100%;
+  color: white;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  z-index: 1;
+  position: sticky;
+}
+
+nav{
+  display: flex;
+  align-items: center;
+}
+nav>ul{
+  display: flex;
+  padding:0;
+  list-style: none;
+  
+  gap: 50px;
+}
+
+nav>.bars{
+  cursor: pointer;
+  display: none;
+}
+
+.welcome{
+  text-align: center;
+  background:black;
+  color: #fff;
+  padding: 10px;
+}
+
+.about{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  color: #fff;
+  gap: 20px;
+  justify-content: center;
+}
+
+.about>p{
+  max-width: 650px;
+  text-align: justify;
+}
+
+.about>img{
+  border-radius:5px;
+}
+
+
+.reasons{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 20px;
+}
+.reason{
+  display: flex;
+  flex-direction: column;
+  background-color: #262626;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.reason:hover{
+  cursor: pointer;
+  border: 3px solid maroon;
+  transform: scale(1.05);
+}
+.reason>p{
+  color: #fff;
+  max-width:400px;
+}
+
+.plans{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-around;
+}
+
+.plan{
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #262626;
+  border-radius: 10px;
+  width: 400px;
+  padding: 10px;
+}
+
+.plan:hover{
+  transform: scale(1.05);
+  cursor: pointer;
+  border: 1px solid maroon;
+  transition: border 0.5s;
+}
+
+.plan>ul{
+  line-height: 7vh;
+  color: white;
+  padding: 0;
+  list-style: circle;
+}
+
+footer{
+  text-align: center;
+  color: white;
+}
 a {
   font-weight: 500;
   color: #646cff;
@@ -23,37 +153,58 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+span{
+  color: maroon;
 }
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #fff;
+}
+h2{
+  color: #fff;
+}
+h3{
+  color: #fff;
 }
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid white;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: black;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: white;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: maroon;
+  color: maroon;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+
+
+.logo{
+  width: 100px;
+  height: auto;
+  border-radius: 50%;
+}
+
+form input[type="text"],input[type="email"], textarea{
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  width: 200px;
+}
+
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -64,6 +215,30 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: black;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  nav>ul{
+    
+    display: none;
+  }
+
+  nav>ul.active{
+    position: absolute;
+    top: 13%;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    height: auto;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    line-height: 5vh;
+  }
+
+  nav>.bars{
+    display: block;
   }
 }
